# wg-bridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTION_GUIDELINES.md  Cargo.toml
.github/workflows/: coverage.yml
docs/decisions/: 0000-use-markdown-any-decision-records.md  README.md
src/: core.rs  lib.rs  main.rs
src/core/: config.rs  logger.rs  mod.rs
tests/: config_test.rs  logger_test.rs
