[package]
name = "wgb"
version = "0.1.0"
edition = "2024"
authors = ["LunaticFringers"]
description = "Simplified Wireguard VPN handler for Debian & derivates"
license = "MIT"
repository = "https://github.com/LunaticFringers/wg-bridge"
categories = ["networking"]

[dependencies]
# cli argument parsing
clap = "4.5.32"

# gui
slint = "1.10.0"

# async
tokio = "1.44.1"

# logging
log = "0.4.26"
env_logger = "0.11.7"
thiserror = "2.0.12"

# serialization
serde = "1.0.219"

[dev-dependencies]
assert_cmd = "2.0.16"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"

[package.metadata.docs.rs]
# For generating documentation, if needed
# Documentation settings go here
