[package]
name = "wgb"
version = "0.1.0"
edition = "2024"
authors = ["LunaticFringers"]
description = "Simplified Wireguard VPN handler for Debian & derivates"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
repository = "https://github.com/LunaticFringers/wg-bridge"
categories = ["networking"]

[dependencies]

# date and time operator
chrono = "0.4.40"

# toml parser
toml = "0.5"

# cli argument parsing
clap = "4.5.32"

# gui
slint = "1.10.0"

# async
tokio = "1.44.1"

# logging
log = "0.4.26"
env_logger = "0.11.7"
thiserror = "2.0.12"
flexi_logger = "0.29.8"

# serialization
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

#environment
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0.16"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"

[package.metadata.docs.rs]
# For generating documentation, if needed
# Documentation settings go here
